--- a/app/src/main/res/xml/fundamentals.xml
+++ b/app/src/main/res/xml/fundamentals.xml
@@ -68,15 +68,16 @@
         <element name="Objective" />
         <element name="Obstacle" />
         <element name="Opportunity" />
-        <element name="Pacing" />
         <element name="Past" />
         <element name="Penalty" />
         <element name="Permanent" />
+        <element name="Personal" />
         <element name="Place" />
         <element name="Player" />
         <element name="Problem" />
         <element name="Progress" />
         <element name="Projectile" />
+        <element name="Public" />
         <element name="Quality" />
         <element name="Random" />
         <element name="Reaction" />
@@ -93,6 +94,7 @@
         <element name="Settings" />
         <element name="Sight" />
         <element name="Similarity" />
+        <element name="Single player" />
         <element name="Skill" />
         <element name="Social" />
         <element name="Solution" />
